[package]
name = "lucene_query_builder"
version = "0.2.4"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oknozor/lucene_query_builder_rs"
documentation = "https://docs.rs/lucene_query_builder"
readme = "crates-io.md"
description = "A procmacro derive crate to generate lucene query builder for Rust structs :"

[dependencies]
lucene_query_builder_rs_derive = { path = "derive",  version = "0.2.3" }
